Imprime camino de mejor fitness en archivo